--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ ul{
     margin: 0 auto;
 }
 
-.first-section, .second-section, .brands-section, .office, .interesting{
+.first-section, .second-section, .brands-section, .office, .interesting, .main-stats{
     margin: 2.5em auto 3.5em;
     max-width: 1051px;
     padding: 0 20px;
@@ -157,7 +157,7 @@ ul{
     font-size: 35px;
     font-family: 'Roboto', sans-serif;
     color: #00b39b;
-    font-weight: 100;
+    font-weight: lighter;
     line-height: 2em;
     margin: 1em 0;
     letter-spacing: -.3px;
@@ -166,6 +166,7 @@ ul{
 h1{
     letter-spacing: -.3px;
     font-size: 35px;
+    font-weight: lighter;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -305,37 +306,73 @@ select:focus{
     overflow: hidden;
 }
 
-/* .stats {
-    background: #e5faf8;
-    background-image: linear-gradient(-45deg,rgba(0,204,177,.01) 5%,rgba(61,199,223,.1));
-    padding: 1.875em 0 0.625em;
+.stats{
+    background-color: #e5faf8;
     overflow: hidden;
-    margin: 3.125rem auto 5.5rem;
 }
 
-.section__inner {
-    zoom: 1;
-    max-width: 1015px;
-    padding: 0 20px;
-    margin: 0 auto;
-    position: relative;
+.main-stats{
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
-.grid {
-    margin: 0 -10px;
-}
-
-.stats__header {
-    margin-top: 2em;
-}
-.col-2 {
-    width: 50%;
-}
-[class*=col-] {
-    float: left;
-    min-height: 1px;
+.stats-head{
+    color: #747474;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    margin: 32px 0px 0px;
     padding: 10px;
-} */
+}
+
+.stats-head h1{
+    color: #00b39b;
+    max-width: 415px;
+    font-weight: lighter;
+}
+
+.stats-head p{
+    max-width: 415px;
+    margin: 22.4px 0px;
+}
+
+.right-stats{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.stats-in{
+    font-size: 16px;
+    padding: 10px;
+}
+
+.stats-higher{
+    transform: translateY(-30px);
+}
+
+.stats-item{
+    background-color: #ffffff;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 1px 4px 0 rgb(0 0 0 / 5%);
+    height: 230px;
+    text-align: center;
+}
+
+.stats-item h3{
+    margin: 12px 0px;
+    color: #00b39b;
+    font-weight: lighter;
+    font-size: 24px;
+    font-family: Work Sans;
+}
+
+.stats-item p{
+    font-size: 13px;
+}
+
+.stats-inner{
+    margin-top: 25px;
+}
 
 .office{
     margin-top: 5.5rem;
